--- a/AppInstallerCaller/MainPage.xaml
+++ b/AppInstallerCaller/MainPage.xaml
@@ -6,7 +6,6 @@
     xmlns:deployment="using:Microsoft.Management.Deployment"
     xmlns:local="using:AppInstallerCaller"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -33,16 +32,26 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <ToggleSwitch x:Name="toggleDevSwitch" Toggled="ToggleDevSwitchToggled">Use WinGetDev</ToggleSwitch>
+        <ToggleSwitch
+            x:Name="toggleDevSwitch"
+            Margin="3"
+            Toggled="ToggleDevSwitchToggled">
+            Use WinGetDev
+        </ToggleSwitch>
 
-        <StackPanel Grid.Row="1">
-            <TextBlock Style="{StaticResource SubheaderTextBlockStyle}">Select catalog</TextBlock>
-
-            <Button x:Name="findSourcesButton" Click="FindSourcesButtonClickHandler">Find Catalogs</Button>
-            <TextBlock>Select catalog to search</TextBlock>
+        <Grid Grid.Row="1" Margin="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackPanel HorizontalAlignment="Stretch">
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}">Select catalog</TextBlock>
+                <Button x:Name="findSourcesButton" Click="FindSourcesButtonClickHandler">Find Catalogs</Button>
+                <TextBlock>Select catalog to search</TextBlock>
+            </StackPanel>
             <ListBox
                 x:Name="catalogsListBox"
-                Height="200"
+                Grid.Row="1"
                 ItemsSource="{x:Bind PackageCatalogs, Mode=OneWay}"
                 SelectionMode="Single">
                 <ItemsControl.ItemTemplate>
@@ -51,9 +60,13 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ListBox>
-        </StackPanel>
+        </Grid>
 
-        <StackPanel Grid.Row="1" Grid.Column="1">
+        <StackPanel
+            Grid.Row="1"
+            Grid.Column="1"
+            Margin="3"
+            HorizontalAlignment="Stretch">
             <TextBlock Style="{StaticResource SubheaderTextBlockStyle}">Install app</TextBlock>
 
             <StackPanel Orientation="Horizontal">
@@ -96,27 +109,33 @@
                 Text="" />
         </StackPanel>
 
-        <StackPanel Grid.Row="2" Margin="3">
-            <TextBlock Style="{StaticResource SubheaderTextBlockStyle}">Installed apps</TextBlock>
-            <TextBlock>List installed apps from selected catalog</TextBlock>
-            <StackPanel Orientation="Horizontal">
-                <Button
-                    x:Name="refreshButton"
-                    Click="RefreshInstalledButtonClickHandler"
-                    IsEnabled="True">
-                    Refresh
-                </Button>
-                <Button
-                    x:Name="clearInstalledButton"
-                    Click="ClearInstalledButtonClickHandler"
-                    IsEnabled="True">
-                    Clear
-                </Button>
+        <Grid Grid.Row="2" Margin="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackPanel HorizontalAlignment="Stretch">
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}">Installed apps</TextBlock>
+                <TextBlock>List installed apps from selected catalog</TextBlock>
+                <StackPanel Orientation="Horizontal">
+                    <Button
+                        x:Name="refreshButton"
+                        Click="RefreshInstalledButtonClickHandler"
+                        IsEnabled="True">
+                        Refresh
+                    </Button>
+                    <Button
+                        x:Name="clearInstalledButton"
+                        Click="ClearInstalledButtonClickHandler"
+                        IsEnabled="True">
+                        Clear
+                    </Button>
+                </StackPanel>
+                <TextBlock x:Name="installedStatusText" Text="" />
             </StackPanel>
-            <TextBlock x:Name="installedStatusText" Text="" />
             <ListBox
                 x:Name="installedListBox"
-                Height="300"
+                Grid.Row="1"
                 ItemsSource="{x:Bind InstalledApps}"
                 ScrollViewer.VerticalScrollMode="Auto">
                 <ItemsControl.ItemTemplate>
@@ -125,32 +144,38 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ListBox>
-        </StackPanel>
+        </Grid>
 
-        <StackPanel
+        <Grid
             Grid.Row="2"
             Grid.Column="1"
             Margin="3">
-            <TextBlock Style="{StaticResource SubheaderTextBlockStyle}">Installing apps</TextBlock>
-            <TextBlock>List apps being installed from selected catalog</TextBlock>
-            <StackPanel Orientation="Horizontal">
-                <Button
-                    x:Name="installingRefreshButton"
-                    Click="RefreshInstallingButtonClickHandler"
-                    IsEnabled="True">
-                    Refresh
-                </Button>
-                <Button
-                    x:Name="installingClearInstalledButton"
-                    Click="ClearInstallingButtonClickHandler"
-                    IsEnabled="True">
-                    Clear
-                </Button>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackPanel HorizontalAlignment="Stretch">
+                <TextBlock Style="{StaticResource SubheaderTextBlockStyle}">Installing apps</TextBlock>
+                <TextBlock>List apps being installed from selected catalog</TextBlock>
+                <StackPanel Orientation="Horizontal">
+                    <Button
+                        x:Name="installingRefreshButton"
+                        Click="RefreshInstallingButtonClickHandler"
+                        IsEnabled="True">
+                        Refresh
+                    </Button>
+                    <Button
+                        x:Name="installingClearInstalledButton"
+                        Click="ClearInstallingButtonClickHandler"
+                        IsEnabled="True">
+                        Clear
+                    </Button>
+                </StackPanel>
+                <TextBlock x:Name="installingStatusText" Text="" />
             </StackPanel>
-            <TextBlock x:Name="installingStatusText" Text="" />
             <ListBox
                 x:Name="installingListBox"
-                Height="300"
+                Grid.Row="1"
                 ItemsSource="{x:Bind InstallingPackages}"
                 ScrollViewer.VerticalScrollBarVisibility="Visible">
                 <ItemsControl.ItemTemplate>
@@ -166,6 +191,6 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ListBox>
-        </StackPanel>
+        </Grid>
     </Grid>
 </Page>
